# MC-Assignment3

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/mca3q2/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  matrix_operations.cpp
app/src/main/java/com/example/matrixcalculator/: MainActivity.kt  MatrixViewModel.kt
app/src/main/java/com/example/mca3q2/: MainActivity.kt  WifiSignalApp.kt  WifiUiState.kt  WifiViewModel.kt
app/src/main/java/com/example/mca3q2/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/mca3q2/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
